@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-05-02 [B] Fixed faulty executed database update on stat_details.php {eenemeenemuu}
+2010-05-02 [C] Fixed missing header for overall stats (thread ID 64799) {eenemeenemuu}
 2010-05-02 [B] Fixed js error for search meta album (thread ID 64312) {eenemeenemuu}
 2010-05-02 [B] Fixed 'crop and rotate' issue {eenemeenemuu}
 2010-05-01 [B] Fixed issue when performing an OR search (thread ID 64786) {eenemeenemuu}
